--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-streamlit
-sentence-transformers
-numpy
-regex
-neo4j
+pydantic
 chromadb
 google-generativeai
-pandas
+neo4j
 python-dotenv
+uvloop
 torch
-transformers
-scikit-learn
-ratelimit
-pysqlite3-binary
+sentence-transformers
+streamlit
+pandas
