--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEO4J_URI = bolt://34.93.55.30:7687
-NEO4J_USER = neo4j
-NEO4J_PASSWORD = A&xR3glQ&AppN
-GEMINI_API_KEY = AIzaSyBYyCcS9-AhAINwwUpqoy9CkB4GJBxihZM
+NEO4J_URI = 
+NEO4J_USER = 
+NEO4J_PASSWORD = 
+GEMINI_API_KEY = 
